--- a/app/src/main/res/layout/activity_conversor_temperaturas.xml
+++ b/app/src/main/res/layout/activity_conversor_temperaturas.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:ems="10"
-        android:hint="@string/hint"
+        android:hint="@string/str.cnversr_temp.hint"
         android:inputType="numberDecimal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
-        android:text="@string/labelHint"
+        android:text="@string/str.label_hint"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -86,8 +86,8 @@
     <Button
         android:id="@+id/btnKelvinCelsius"
         style="@style/Widget.AppCompat.Button.Small"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="191dp"
+        android:layout_height="52dp"
         android:layout_marginTop="12dp"
         android:height="@dimen/material_emphasis_disabled"
         android:text="@string/str.btn.KelvinCelsius"
